; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_opencl.c_ff_opencl_get_event_time.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_opencl.c_ff_opencl_get_event_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CL_PROFILING_COMMAND_START = common dso_local global i32 0, align 4
@CL_PROFILING_COMMAND_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ff_opencl_get_event_time(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @CL_PROFILING_COMMAND_START, align 4
  %7 = call i32 @clGetEventProfilingInfo(i32 %5, i32 %6, i32 8, i64* %3, i32* null)
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @CL_PROFILING_COMMAND_END, align 4
  %10 = call i32 @clGetEventProfilingInfo(i32 %8, i32 %9, i32 8, i64* %4, i32* null)
  %11 = load i64, i64* %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = sub nsw i64 %11, %12
  ret i64 %13
}

declare dso_local i32 @clGetEventProfilingInfo(i32, i32, i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
